# ScanZakup

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: backend.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  analytics.py  auth.py  contracts.py  export.py  health.py  lots.py  participants.py  procurements.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/goszakup_client/: __init__.py  client.py  exceptions.py
backend/app/ingest_workers/: __init__.py  celery_app.py  tasks.py
backend/app/models/: __init__.py  base.py  contract.py  lot.py  participant.py  raw_data.py  trd_buy.py
backend/app/schemas/: __init__.py  analytics.py  base.py  contract.py  export.py  lot.py  participant.py  procurement.py
backend/app/services/: __init__.py  analytics_service.py  base_service.py  contract_service.py  export_service.py  lot_service.py  participant_service.py  sync_service.py  trd_buy_service.py
backend/tests/: __init__.py  conftest.py  test_main.py
